--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,19 @@
-apply plugin: 'java'
-apply plugin: 'application'
+plugins {
+    id 'java'
+}
+
+group 'org.example'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
-dependencies{
-    implentation 'org.apache.commons:commons-rng-core:1.4'
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
-mainClassName = 'csci2020u.lab02.simpleTest'
+test {
+    useJUnitPlatform()
+}
